Some improvements/optimizations/bug fixes